crates/rome_console/tests/markup/invalid_group.stderr
error: unexpected token
 --> tests/markup/invalid_group.rs:3:9
  |
3 |         []
  |         ^^
