crates/rome_console/tests/markup/invalid_group.rs
fn main() {
    rome_console::markup! {
        []
    }
}
